width match design

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #64f46e; }
+  background: #6bca64; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c8c82e; }
+  background: #7730e8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #194d73; }
+  background: #c229d5; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #58b923; }
+  background: #d677a6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5657ba; }
+  background: #a63a78; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #aacc2f; }
+  background: #0f903f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #818a78; }
+  background: #f08855; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #13456a; }
+  background: #4b9417; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ef4e90; }
+  background: #679e2e; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b69627; }
+  background: #797568; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c957aa; }
+  background: #173532; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #49ec26; }
+  background: #a4ec83; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c02a98; }
+  background: #01c334; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #88e9ea; }
+  background: #e25609; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #0e7d91; }
+  background: #164ee0; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #17e842; }
+  background: #2cb384; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8b24f8; }
+  background: #108b4c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fb3e9a; }
+  background: #9a577b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #789b81; }
+  background: #814dba; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ab3bff; }
+  background: #0abc82; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #73c603; }
+  background: #2c0667; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #399659; }
+  background: #80478f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f20d5d; }
+  background: #f8dc25; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #5f826d; }
+  background: #760762; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #76ff91; }
+  background: #c551be; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #655b5e; }
+  background: #b6054f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7552ed; }
+  background: #308c1c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #42a8f2; }
+  background: #84fb8c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #aee640; }
+  background: #84797a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #80661c; }
+  background: #d2138b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #f068ce; }
+  background: #15312e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #34bb09; }
+  background: #55c659; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #371e66; }
+  background: #777954; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #db82b2; }
+  background: #f04162; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #dc91af; }
+  background: #ed9cf2; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #06b731; }
+  background: #6daf8a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #43e659; }
+  background: #a37c4c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #a4e51e; }
+  background: #32540f; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ea4761; }
+  background: #9ee6dd; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a1e4a8; }
+  background: #8e3111; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ea965c; }
+  background: #363c5f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e8d81b; }
+  background: #b3479d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b06cd2; }
+  background: #c6ba94; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #8bc6c8; }
+  background: #d94582; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #97caa0; }
+  background: #35ff60; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #81dab2; }
+  background: #8cd878; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #74d79d; }
+  background: #097d28; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #24d989; }
+  background: #9e766a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e7afb2; }
+  background: #78d5c0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #526de4; }
+  background: #ce17df; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b4cb8d; }
+  background: #cffd91; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d6e5c7; }
+  background: #ce0565; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #811104; }
+  background: #0ca397; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #68c5d1; }
+  background: #68e404; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #dfde41; }
+  background: #5886d4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #545f3a; }
+  background: #e87741; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #8b07f1; }
+  background: #6cb894; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #33f7b6; }
+  background: #136fbc; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #31ffad; }
+  background: #9f5b96; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9c1be0; }
+  background: #131748; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ad6f0a; }
+  background: #3c7bb4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #09bf09; }
+  background: #f83e99; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #b80e23; }
+  background: #b91f9c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b8f910; }
+  background: #c1f98e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #5fb7e7; }
+  background: #c780b4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #138bea; }
+  background: #d53f60; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #779c78; }
+  background: #c62f01; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9a8261; }
+  background: #c87adc; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #76b7e6; }
+  background: #34e0ca; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #afd637; }
+  background: #f90efa; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #fad861; }
+  background: #a1b744; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4c4584; }
+  background: #0984a3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f52ec3; }
+  background: #629ae9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #132e71; }
+  background: #d81015; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fffe7d; }
+  background: #636ddc; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #2559be; }
+  background: #127f8b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9553d9; }
+  background: #67dd5d; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1fd028; }
+  background: #ff93f0; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7136cc; }
+  background: #ba0a4d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1a506c; }
+  background: #46a2d6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7ad31d; }
+  background: #90974f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #ff8874; }
+  background: #bbf865; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2d3c97; }
+  background: #fae44a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #499533; }
+  background: #92203f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f1ff4e; }
+  background: #33919d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ae3c93; }
+  background: #c1285c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #7cdb1b; }
+  background: #a19e8d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #759ae6; }
+  background: #a13929; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #5fc6c6; }
+  background: #c2b26e; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #479fe3; }
+  background: #5595fd; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b34001; }
+  background: #fefa41; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #868742; }
+  background: #559913; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #6f77b7; }
+  background: #fdb394; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e3ee5c; }
+  background: #126907; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #3bc987; }
+  background: #2f9bcd; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #2c0209; }
+  background: #9d0a7a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b49f8b; }
+  background: #a51c0f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8f5122; }
+  background: #ef8cc7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #d24497; }
+  background: #b3a529; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #618c85; }
+  background: #43e0e4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10571,11 +10571,9 @@ input[type="checkbox"] {
   padding: 90px; }
 
 .intro-inner-div {
-  width: 960px;
-  min-height: 95vh;
+  width: 1440px;
   background: #fff;
   border-radius: 10px;
-  overflow: hidden;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
