--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -14,11 +14,11 @@
 }
 
 .intro-inner-div {
-    width: 960px;
-    min-height: 95vh;
+    width: 1440px;
+    // min-height: 95vh;
     background: #fff;
     border-radius: 10px;
-    overflow: hidden;
+    // overflow: hidden;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
