slider hieght issue

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6bca64; }
+  background: #de2652; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7730e8; }
+  background: #9e9f91; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c229d5; }
+  background: #2e3a88; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d677a6; }
+  background: #4ba270; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a63a78; }
+  background: #af4531; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #0f903f; }
+  background: #2aa884; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f08855; }
+  background: #b86c72; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4b9417; }
+  background: #bc6feb; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #679e2e; }
+  background: #c85167; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #797568; }
+  background: #2f2f29; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #173532; }
+  background: #5bdf07; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a4ec83; }
+  background: #9e86ce; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #01c334; }
+  background: #e9299f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e25609; }
+  background: #49ee93; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #164ee0; }
+  background: #b0c366; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #2cb384; }
+  background: #abf22b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #108b4c; }
+  background: #636218; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #9a577b; }
+  background: #c1c61d; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #814dba; }
+  background: #e16159; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #0abc82; }
+  background: #4018d9; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2c0667; }
+  background: #f2ac55; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #80478f; }
+  background: #4a3ead; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f8dc25; }
+  background: #7d3082; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #760762; }
+  background: #e870cf; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c551be; }
+  background: #81948a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #b6054f; }
+  background: #5a1f02; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #308c1c; }
+  background: #618617; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #84fb8c; }
+  background: #0ab5ec; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #84797a; }
+  background: #94b55f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d2138b; }
+  background: #7dcb9e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #15312e; }
+  background: #6e7216; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #55c659; }
+  background: #7612a3; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #777954; }
+  background: #de0840; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f04162; }
+  background: #f8a9d4; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ed9cf2; }
+  background: #cd4c03; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6daf8a; }
+  background: #be314a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a37c4c; }
+  background: #f353cb; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #32540f; }
+  background: #e50ecd; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9ee6dd; }
+  background: #f73d9f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #8e3111; }
+  background: #881787; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #363c5f; }
+  background: #7d459f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b3479d; }
+  background: #0aa664; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c6ba94; }
+  background: #6d2c0d; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d94582; }
+  background: #d7a3fc; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #35ff60; }
+  background: #a4b5df; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8cd878; }
+  background: #a7af0a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #097d28; }
+  background: #163575; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #9e766a; }
+  background: #874094; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #78d5c0; }
+  background: #cc187d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ce17df; }
+  background: #9f0ad0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #cffd91; }
+  background: #08f568; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #ce0565; }
+  background: #68952b; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0ca397; }
+  background: #5cfc75; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #68e404; }
+  background: #0c1c61; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5886d4; }
+  background: #f03ad2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e87741; }
+  background: #2dd958; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6cb894; }
+  background: #5df4b4; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #136fbc; }
+  background: #13d5e7; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9f5b96; }
+  background: #e99745; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #131748; }
+  background: #f4a015; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3c7bb4; }
+  background: #29b95a; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f83e99; }
+  background: #a9bb33; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #b91f9c; }
+  background: #da16ab; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c1f98e; }
+  background: #556e83; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c780b4; }
+  background: #fbd8ba; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d53f60; }
+  background: #cf62fd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c62f01; }
+  background: #f56f25; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c87adc; }
+  background: #a5ebcc; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #34e0ca; }
+  background: #795ead; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f90efa; }
+  background: #b79da5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a1b744; }
+  background: #091008; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0984a3; }
+  background: #aa88ca; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #629ae9; }
+  background: #b9638b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d81015; }
+  background: #2bb6af; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #636ddc; }
+  background: #75af2a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #127f8b; }
+  background: #4e07d6; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #67dd5d; }
+  background: #6b72a6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ff93f0; }
+  background: #a976aa; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ba0a4d; }
+  background: #366398; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #46a2d6; }
+  background: #66c2d4; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #90974f; }
+  background: #c1e3b7; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #bbf865; }
+  background: #cb4811; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #fae44a; }
+  background: #cedcde; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #92203f; }
+  background: #31651f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #33919d; }
+  background: #f764a2; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c1285c; }
+  background: #106b45; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a19e8d; }
+  background: #a6f68a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a13929; }
+  background: #e7dae7; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c2b26e; }
+  background: #d52f6a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #5595fd; }
+  background: #43f339; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #fefa41; }
+  background: #357865; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #559913; }
+  background: #6857ae; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #fdb394; }
+  background: #836d20; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #126907; }
+  background: #aff380; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #2f9bcd; }
+  background: #0323d1; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9d0a7a; }
+  background: #9d0a35; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a51c0f; }
+  background: #98697c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ef8cc7; }
+  background: #058fb4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b3a529; }
+  background: #684791; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #43e0e4; }
+  background: #aa6b99; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10596,14 +10596,12 @@ input[type="checkbox"] {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 100% 50%;
-  -webkit-transition: clip .7s ease-in-out, z-index 0s .7s;
-  transition: clip .7s ease-in-out, z-index 0s .7s;
-  clip: rect(0, 100vw, 100vh, 0);
-  display: table;
+  -webkit-transition: clip 0.7s ease-in-out, z-index 0s 0.7s;
+  transition: clip 0.7s ease-in-out, z-index 0s 0.7s;
   border-radius: 10px 0px 0px 10px; }
 
 .center-y {
@@ -10646,10 +10644,10 @@ input[type="checkbox"] {
 h3,
 h3 + a {
   opacity: 0;
-  -webkit-transition: opacity .7s 0s, -webkit-transform .5s .2s;
-  transition: opacity .7s 0s, -webkit-transform .5s .2s;
-  transition: opacity .7s 0s, transform .5s .2s;
-  transition: opacity .7s 0s, transform .5s .2s, -webkit-transform .5s .2s;
+  -webkit-transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
+  transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
+  transition: opacity 0.7s 0s, transform 0.5s 0.2s;
+  transition: opacity 0.7s 0s, transform 0.5s 0.2s, -webkit-transform 0.5s 0.2s;
   -webkit-transform: translate3d(0, 50%, 0);
   transform: translate3d(0, 50%, 0); }
 
@@ -10700,7 +10698,7 @@ li.prev {
   vertical-align: top; }
 
 .LoginPanel .fieldsSection {
-    /*min-width: 320px;
+  /*min-width: 320px;
 	padding-left: 26px;*/
   display: inline-block;
   vertical-align: top; }
@@ -10758,7 +10756,7 @@ select {
   -moz-box-sizing: border-box; }
 
 .LoginPanel .fieldsBotSection input[type="checkbox"] {
-    /*border: 1px solid #b9babd;
+  /*border: 1px solid #b9babd;
 	background: #fff;
 	width: 12px;*/
   display: none; }
