--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1,258 +1,278 @@
 // Login page css
 .block {
-    display: block;
+  display: block;
 }
 
 .intro {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    width: 100%;
-    height: auto;
-    padding: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 90px;
 }
 
 .intro-inner-div {
-    width: 1440px;
-    // min-height: 95vh;
-    background: #fff;
-    border-radius: 10px;
-    // overflow: hidden;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    /*! display:flex; */
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
+  width: 1440px;
+  // min-height: 95vh;
+  background: #fff;
+  border-radius: 10px;
+  // overflow: hidden;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  /*! display:flex; */
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
 }
 
 .slider {
-    position: relative;
-    width: 50%;
-    height: 100vh;
+  position: relative;
+  width: 50%;
+  height: 100vh;
 }
 
 .slider li {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 100% 50%;
-    -webkit-transition: clip .7s ease-in-out, z-index 0s .7s;
-    transition: clip .7s ease-in-out, z-index 0s .7s;
-    clip: rect(0, 100vw, 100vh, 0);
-    display: table;
-    border-radius: 10px 0px 0px 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 100% 50%;
+  -webkit-transition: clip 0.7s ease-in-out, z-index 0s 0.7s;
+  transition: clip 0.7s ease-in-out, z-index 0s 0.7s;
+  // clip: rect(0, 100vw, 100vh, 0);
+  // display: table;
+  border-radius: 10px 0px 0px 10px;
 }
 
+// .slider {
+//   position: relative;
+//   width: 50%;
+//   border: 1px solid black;
+// }
+
+// .slider li {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   background-position: 100% 50%;
+//   -webkit-transition: clip 0.7s ease-in-out, z-index 0s 0.7s;
+//   transition: clip 0.7s ease-in-out, z-index 0s 0.7s;
+//   border-radius: 10px 0px 0px 10px;
+// }
+
 .center-y {
-    text-align: left;
-    color: #000;
-    font-size: 1.6rem;
-    padding: 11% 0 0 4%;
+  text-align: left;
+  color: #000;
+  font-size: 1.6rem;
+  padding: 11% 0 0 4%;
 }
 
 .center-y h3 {
-    font-size: 3.8rem;
-    color: #1c9cd7;
-    margin: 1rem 0rem;
+  font-size: 3.8rem;
+  color: #1c9cd7;
+  margin: 1rem 0rem;
 }
 
-.center-y h3+a {
-    font-size: 1.6rem;
-    display: inline-block;
-    color: #000;
-    margin-top: 2rem;
+.center-y h3 + a {
+  font-size: 1.6rem;
+  display: inline-block;
+  color: #000;
+  margin-top: 2rem;
 }
 
 .center-y h4 {
-    font-size: 2.3rem;
-    display: list-item;
-    color: #e22026;
-    margin: 1.2rem 0rem;
+  font-size: 2.3rem;
+  display: list-item;
+  color: #e22026;
+  margin: 1.2rem 0rem;
 }
 
 .center-y .Btn {
-    font-size: 18px;
-    margin-bottom: 10px;
-    color: #fff;
-    width: 30%;
-    display: inline-table;
-    text-align: center;
-    line-height: 0.9em;
-    padding: 18px !important;
-    margin: auto 10rem;
-    background: #8651ff;
-    border: none;
-    border-radius: 5px;
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #fff;
+  width: 30%;
+  display: inline-table;
+  text-align: center;
+  line-height: 0.9em;
+  padding: 18px !important;
+  margin: auto 10rem;
+  background: #8651ff;
+  border: none;
+  border-radius: 5px;
 }
 
 h3,
-h3+a {
-    opacity: 0;
-    -webkit-transition: opacity .7s 0s, -webkit-transform .5s .2s;
-    transition: opacity .7s 0s, -webkit-transform .5s .2s;
-    transition: opacity .7s 0s, transform .5s .2s;
-    transition: opacity .7s 0s, transform .5s .2s, -webkit-transform .5s .2s;
-    -webkit-transform: translate3d(0, 50%, 0);
-    transform: translate3d(0, 50%, 0);
+h3 + a {
+  opacity: 0;
+  -webkit-transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
+  transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
+  transition: opacity 0.7s 0s, transform 0.5s 0.2s;
+  transition: opacity 0.7s 0s, transform 0.5s 0.2s, -webkit-transform 0.5s 0.2s;
+  -webkit-transform: translate3d(0, 50%, 0);
+  transform: translate3d(0, 50%, 0);
 }
 
 li.current h3,
-li.current h3+a {
-    opacity: 1;
-    -webkit-transition-delay: 1s;
-    transition-delay: 1s;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+li.current h3 + a {
+  opacity: 1;
+  -webkit-transition-delay: 1s;
+  transition-delay: 1s;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 li.current {
-    z-index: 1;
-    clip: rect(0, 100vw, 100vh, 0);
+  z-index: 1;
+  clip: rect(0, 100vw, 100vh, 0);
 }
 
 li.prev {
-    clip: rect(0, 0, 100vh, 0);
+  clip: rect(0, 0, 100vh, 0);
 }
 
 .aad {
-    background: #fff;
-    display: flex;
-    flex-direction: row;
-    border-radius: 20px;
-    margin: 70px 100px;
+  background: #fff;
+  display: flex;
+  flex-direction: row;
+  border-radius: 20px;
+  margin: 70px 100px;
 }
 
 .slider nav {
-    position: absolute;
-    bottom: 5%;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 10;
+  position: absolute;
+  bottom: 5%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 10;
 }
 
 .right-panel-div {
-    width: 50%;
+  width: 50%;
 }
 
 .LoginPanel {
-    padding: 30px 100px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  padding: 30px 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .LoginPanel .logoSection {
-    width: auto;
-    padding-right: 30px;
-    border-right: 1px solid #6d6e71;
-    display: inline-block;
-    vertical-align: top;
+  width: auto;
+  padding-right: 30px;
+  border-right: 1px solid #6d6e71;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .LoginPanel .fieldsSection {
-    /*min-width: 320px;
+  /*min-width: 320px;
 	padding-left: 26px;*/
-    display: inline-block;
-    vertical-align: top;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .LoginPanel h1 {
-    font-size: 35px;
-    margin: 40px 0px 8px 0px;
+  font-size: 35px;
+  margin: 40px 0px 8px 0px;
 }
 
 .LoginPanel h3 {
-    color: #9a9a9a;
-    font-size: 18px;
-    margin: 5px 0px 40px 0px;
-    opacity: 1;
+  color: #9a9a9a;
+  font-size: 18px;
+  margin: 5px 0px 40px 0px;
+  opacity: 1;
 }
 
 .LoginPanel label {
-    color: #4c4c4c;
+  color: #4c4c4c;
 }
 
 input[type="text"],
 input[type="password"],
 textarea {
-    border: 1px solid #cdcdd6;
-    padding: 16px;
-    font-size: 15px;
-    border-radius: 5px;
-    line-height: 1em;
-    width: 100%;
-    color: #cbc9c9;
+  border: 1px solid #cdcdd6;
+  padding: 16px;
+  font-size: 15px;
+  border-radius: 5px;
+  line-height: 1em;
+  width: 100%;
+  color: #cbc9c9;
 }
 
 select {
-    border: 1px solid #cdcdd6;
-    padding: 5.5px;
-    color: #cbc9c9;
-    font-size: 15px;
-    line-height: 1em;
-    width: 100%;
-    -moz-appearance: none;
-    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97% 13px;
-    box-sizing: border-box;
-    cursor: pointer;
+  border: 1px solid #cdcdd6;
+  padding: 5.5px;
+  color: #cbc9c9;
+  font-size: 15px;
+  line-height: 1em;
+  width: 100%;
+  -moz-appearance: none;
+  background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97% 13px;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 
 .LoginPanel .fieldsSection .userName {
-    background: #fff url(../images/icon-user.png) no-repeat 12px center;
-    margin-bottom: 55px;
+  background: #fff url(../images/icon-user.png) no-repeat 12px center;
+  margin-bottom: 55px;
 }
 
 .LoginPanel .fieldsSection .password {
-    margin-bottom: 10px;
-    background: #fff url(../images/eye.png) no-repeat center right;
+  margin-bottom: 10px;
+  background: #fff url(../images/eye.png) no-repeat center right;
 }
 
 .LoginPanel .fieldsSection .userName,
 .LoginPanel .fieldsSection .password {
-    width: 100%;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+  width: 100%;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 .LoginPanel .fieldsBotSection input[type="checkbox"] {
-    /*border: 1px solid #b9babd;
+  /*border: 1px solid #b9babd;
 	background: #fff;
 	width: 12px;*/
-    display: none;
+  display: none;
 }
 
 .remember {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .LoginPanel .fieldsBotSection label {
-    color: #4c4c4c;
-    padding: 25px 0px;
-    font-size: 15px;
-    transition: all 0.3s ease-in-out 0s;
-    line-height: 1.1em;
-    background: url(../images/uncheckbox-img.png) no-repeat 0px center;
-    cursor: pointer;
-    padding-left: 35px;
-    font-family: Arial, Helvetica, sans-serif;
+  color: #4c4c4c;
+  padding: 25px 0px;
+  font-size: 15px;
+  transition: all 0.3s ease-in-out 0s;
+  line-height: 1.1em;
+  background: url(../images/uncheckbox-img.png) no-repeat 0px center;
+  cursor: pointer;
+  padding-left: 35px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.LoginPanel .fieldsBotSection input[type="checkbox"]:checked+label {
-    background-image: url(../images/checkbox-img.png);
+.LoginPanel .fieldsBotSection input[type="checkbox"]:checked + label {
+  background-image: url(../images/checkbox-img.png);
 }
 
 /*.LoginPanel .Btn{
@@ -261,224 +281,224 @@ select {
 }
 */
 .or-login-div {
-    padding: 6px 0px;
+  padding: 6px 0px;
 }
 
 .or-login-div span {
-    padding: 8px 8px 20px;
+  padding: 8px 8px 20px;
 }
 
 .LoginPanel .fieldsBotSection .forgotLink {
-    color: #8e8e8e;
-    font-size: 15px;
-    transition: all 0.3s ease-in-out 0s;
-    line-height: 1em;
-    font-family: Arial, Helvetica, sans-serif;
+  color: #8e8e8e;
+  font-size: 15px;
+  transition: all 0.3s ease-in-out 0s;
+  line-height: 1em;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .LogoIcon {
-    background: transparent url('images/logo-icon.png') no-repeat center center;
-    background-size: 100% auto;
-    display: block;
-    width: 166px;
-    height: 186px;
+  background: transparent url("images/logo-icon.png") no-repeat center center;
+  background-size: 100% auto;
+  display: block;
+  width: 166px;
+  height: 186px;
 }
 
 .LogoIcon span {
-    display: none;
+  display: none;
 }
 
 .fr {
-    float: right;
+  float: right;
 }
 
 .fl {
-    float: left;
+  float: left;
 }
 
 .text-c {
-    text-align: center;
+  text-align: center;
 }
 
 .Btn,
 input[type="submit"] {
-    font-size: 18px;
-    margin-bottom: 10px;
-    color: #fff;
-    width: 100%;
-    line-height: 0.9em;
-    padding: 18px !important;
-    background: #8651ff;
-    border: none;
-    border-radius: 5px;
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #fff;
+  width: 100%;
+  line-height: 0.9em;
+  padding: 18px !important;
+  background: #8651ff;
+  border: none;
+  border-radius: 5px;
 }
 
 .try-free-btn {
-    font-size: 17px;
-    margin-bottom: 10px;
-    color: #fff;
-    width: 100%;
-    line-height: 0.9em;
-    padding: 16px !important;
-    background: #a3a2a2;
-    border: none;
-    border-radius: 5px;
-    transition: all 0.3s ease-in-out 0s;
+  font-size: 17px;
+  margin-bottom: 10px;
+  color: #fff;
+  width: 100%;
+  line-height: 0.9em;
+  padding: 16px !important;
+  background: #a3a2a2;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out 0s;
 }
 
 //Login css End
 .expression-heading {
-    font-size: 18px !important;
-    margin-top: 30px;
+  font-size: 18px !important;
+  margin-top: 30px;
 }
 
 .query-wizard-sub-heading-description h3 {
-    font-weight: bold !important;
+  font-weight: bold !important;
 }
 
 .modal-footer-div {
-    display: flex;
-    justify-content: space-between !important;
-    padding-left: 56px !important;
-    padding-left: 56px !important;
+  display: flex;
+  justify-content: space-between !important;
+  padding-left: 56px !important;
+  padding-left: 56px !important;
 }
 
 .query-wizard-expension div {
-    margin: 0px 3px;
+  margin: 0px 3px;
 }
 
 .dropdown-no-m {
-    margin-right: 0px !important;
+  margin-right: 0px !important;
 }
 
 .dropdown-with-img {
-    margin-right: -2px !important;
-    min-height: 47px;
+  margin-right: -2px !important;
+  min-height: 47px;
 }
 
 .ID-Field {
-    width: 450px;
+  width: 450px;
 }
 
 .tabs-aggre .nav-link button,
 .tabs-aggre .nav-link {
-    border: 0px solid #dcdde1 !important;
+  border: 0px solid #dcdde1 !important;
 }
 
 .tabs-aggre button {
-    padding: 15px 22px !important;
-    color: #4c4c4c !important;
+  padding: 15px 22px !important;
+  color: #4c4c4c !important;
 }
 
 .table-fonts td {
-    font-size: 14px !important;
-    color: #4c4c4c !important;
+  font-size: 14px !important;
+  color: #4c4c4c !important;
 }
 
 .tabs-sidemenu-accord-container .table-submenu-list li a:hover {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
 .add-comment-section button {
-    padding-left: 50px !important;
-    padding-right: 50px !important;
+  padding-left: 50px !important;
+  padding-right: 50px !important;
 }
 
 .table-borderless thead {
-    background: none;
-    color: #8c8c8c;
-    font-family: "proxima-semi-bold";
-    border-bottom: 1px solid #dcdde1;
+  background: none;
+  color: #8c8c8c;
+  font-family: "proxima-semi-bold";
+  border-bottom: 1px solid #dcdde1;
 }
 
 .table-borderless thead th {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .table-borderless {
-    border: 0px !important;
-    white-space: nowrap;
-    width: 100%;
+  border: 0px !important;
+  white-space: nowrap;
+  width: 100%;
 }
 
 .add-tags-left-col {
-    width: 75%;
+  width: 75%;
 }
 
 .add-tags-container {
-    display: flex;
-    padding: 20px 10px;
-    font-size: 14px;
+  display: flex;
+  padding: 20px 10px;
+  font-size: 14px;
 }
 
 .td-bubble {
-    background: #f4f4f4;
-    padding: 12px 20px;
-    display: inline;
-    border-radius: 40px;
+  background: #f4f4f4;
+  padding: 12px 20px;
+  display: inline;
+  border-radius: 40px;
 }
 
 .table th,
 .table td {
-    vertical-align: middle !important;
+  vertical-align: middle !important;
 }
 
 .table-icons {
-    height: 18px;
+  height: 18px;
 }
 
 .icon-td {
-    text-align: center !important;
+  text-align: center !important;
 }
 
 .th-icon-div {
-    width: 12% !important;
-    text-align: center;
+  width: 12% !important;
+  text-align: center;
 }
 
 .table td .table-icons {
-    text-align: center;
+  text-align: center;
 }
 
 .add-tags-right-col {
-    flex: 1;
-    margin-left: 60px;
-    margin-top: 20px;
+  flex: 1;
+  margin-left: 60px;
+  margin-top: 20px;
 }
 
 .tags-field-box input {
-    width: 260px;
-    padding: 14px 10px;
-    border: 1px solid #c2c3c7;
-    margin-bottom: 20px;
-    border-radius: 5px;
+  width: 260px;
+  padding: 14px 10px;
+  border: 1px solid #c2c3c7;
+  margin-bottom: 20px;
+  border-radius: 5px;
 }
 
 .add-tags-right-col .graydient-primary-btn {
-    padding-left: 30px;
-    padding-right: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .scroll-div {
-    width: 95%;
+  width: 95%;
 }
 
 .tree-list-div {
-    border: 1px solid #c2c3c7;
-    margin: 0px 20px 25px;
-    width: 700px;
-    overflow: auto;
-    max-height: 500px;
-    padding: 20px;
+  border: 1px solid #c2c3c7;
+  margin: 0px 20px 25px;
+  width: 700px;
+  overflow: auto;
+  max-height: 500px;
+  padding: 20px;
 }
 
 .tree-list-div .device-tab-right-heading,
 .tree-list-div .device-tab-norman-txt {
-    font-size: 12px !important;
+  font-size: 12px !important;
 }
 
 .tree-list-div .device-tab-detail-box {
-    padding: 0px !important;
-    width: 100%;
-    max-height: 300px;
+  padding: 0px !important;
+  width: 100%;
+  max-height: 300px;
 }
