hieght issue fixed

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #de2652; }
+  background: #cb7aa2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9e9f91; }
+  background: #8d6152; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2e3a88; }
+  background: #3e5321; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #4ba270; }
+  background: #bc8886; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #af4531; }
+  background: #7322fb; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2aa884; }
+  background: #e374b3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #b86c72; }
+  background: #f3a5e0; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bc6feb; }
+  background: #0dafe4; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c85167; }
+  background: #f19a54; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #2f2f29; }
+  background: #2e9131; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #5bdf07; }
+  background: #49d230; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #9e86ce; }
+  background: #baf159; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e9299f; }
+  background: #dc5c9a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #49ee93; }
+  background: #13b406; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b0c366; }
+  background: #27977d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #abf22b; }
+  background: #6e13f3; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #636218; }
+  background: #158b9c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c1c61d; }
+  background: #070b94; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e16159; }
+  background: #77e26a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4018d9; }
+  background: #888e2f; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f2ac55; }
+  background: #5dcc4e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #4a3ead; }
+  background: #0e36e1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7d3082; }
+  background: #87fedc; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e870cf; }
+  background: #7b861a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #81948a; }
+  background: #9f8a54; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #5a1f02; }
+  background: #4465fc; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #618617; }
+  background: #f598be; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #0ab5ec; }
+  background: #629c26; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #94b55f; }
+  background: #c1f2a3; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #7dcb9e; }
+  background: #e67682; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6e7216; }
+  background: #d76ae3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7612a3; }
+  background: #f2f22a; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #de0840; }
+  background: #7f2aad; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f8a9d4; }
+  background: #ce3e2d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #cd4c03; }
+  background: #bc6eed; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #be314a; }
+  background: #59d277; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f353cb; }
+  background: #32da0a; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e50ecd; }
+  background: #586917; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f73d9f; }
+  background: #03b1ab; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #881787; }
+  background: #e9a0bf; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #7d459f; }
+  background: #3717bf; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0aa664; }
+  background: #7402e2; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6d2c0d; }
+  background: #4861cb; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d7a3fc; }
+  background: #e37398; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a4b5df; }
+  background: #eec50e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a7af0a; }
+  background: #9cd507; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #163575; }
+  background: #052c70; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #874094; }
+  background: #e97b72; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #cc187d; }
+  background: #f5f5a3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #9f0ad0; }
+  background: #52ae8f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #08f568; }
+  background: #8fc8e1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #68952b; }
+  background: #2ed45d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #5cfc75; }
+  background: #63c406; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #0c1c61; }
+  background: #4c8356; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f03ad2; }
+  background: #d67aa2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2dd958; }
+  background: #b16777; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5df4b4; }
+  background: #bf6943; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #13d5e7; }
+  background: #bafa73; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #e99745; }
+  background: #5c2325; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f4a015; }
+  background: #36de34; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #29b95a; }
+  background: #eb3901; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a9bb33; }
+  background: #734304; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #da16ab; }
+  background: #04f25e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #556e83; }
+  background: #46761b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fbd8ba; }
+  background: #4472d6; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #cf62fd; }
+  background: #4d456d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f56f25; }
+  background: #fc80c9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a5ebcc; }
+  background: #6dc262; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #795ead; }
+  background: #493b6a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b79da5; }
+  background: #8cb0e5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #091008; }
+  background: #0202cc; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #aa88ca; }
+  background: #4f031d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b9638b; }
+  background: #5ab15b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2bb6af; }
+  background: #233a48; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #75af2a; }
+  background: #568f19; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #4e07d6; }
+  background: #f198a7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #6b72a6; }
+  background: #3789a6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a976aa; }
+  background: #b09c70; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #366398; }
+  background: #fae04d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #66c2d4; }
+  background: #54d835; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c1e3b7; }
+  background: #69bc58; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #cb4811; }
+  background: #42c3a7; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #cedcde; }
+  background: #2d5e95; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #31651f; }
+  background: #7f9a0c; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f764a2; }
+  background: #a0076c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #106b45; }
+  background: #bedb4a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a6f68a; }
+  background: #448bd9; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e7dae7; }
+  background: #1ce7e0; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d52f6a; }
+  background: #455941; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #43f339; }
+  background: #cbfbd9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #357865; }
+  background: #577291; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6857ae; }
+  background: #522a0c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #836d20; }
+  background: #9326af; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #aff380; }
+  background: #949f3a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0323d1; }
+  background: #cc48bf; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9d0a35; }
+  background: #8f6dcb; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #98697c; }
+  background: #b66ef6; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #058fb4; }
+  background: #7c50eb; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #684791; }
+  background: #0fc6ef; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #aa6b99; }
+  background: #2ff50b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10581,15 +10581,13 @@ input[type="checkbox"] {
   /*! display:flex; */
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19); }
 
 .slider {
   position: relative;
-  width: 50%;
-  height: 100vh; }
+  width: 50%; }
 
 .slider li {
   position: absolute;
