--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -26,7 +26,7 @@
   /*! display:flex; */
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  //   align-items: center;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
@@ -35,7 +35,7 @@
 .slider {
   position: relative;
   width: 50%;
-  height: 100vh;
+  //   height: 100vh;
 }
 
 .slider li {
